--- a/Resume_siddharth.tex
+++ b/Resume_siddharth.tex
@@ -75,22 +75,28 @@ Department of Chemical Engineering \hspace{3.25cm} Email: sidgane@iitk.ac.in, si
  \begin{itemize}
 \item MTH101 - Calculus and Analytic Geometry
 \item ESC101 - Introduction to C Programming
+\item CHE211 - Fluid Mechanics \textsuperscript{$\dagger$}
 \end{itemize}
 &
 \begin{itemize}
 \item MTH102 - Linear Algebra and ODE
 \item ESO208 - Numerical Methods
+\item CHE221 - Chemical Thermodynamics\textsuperscript{$\dagger$}
 \end{itemize}
 \end{tabular}
 
 \begin{flushright}
+    \small{$\ast$ - Awarded A grade for performance}
+    $\quad$
+    \small{$\dagger$ - Ongoing}
 \end{flushright}
 \end{center}
 
+
 \section*{\underline{Technical Skills}}
 \begin{itemize}
-\item \textbf{Programming Skills: } C, C++, Python, HTML, CSS, Java, Matlab, Bash Script, Regex. 
-\item \textbf{Software and Utilities: } Git, \LaTeX, Arduino, SolidWorks, Android Studio, Processing, Linux/Shell.
+\item \textbf{Programming Skills: } C/C++, Python, Java, Bash. 
+\item \textbf{Software and Utilities: } Git, \LaTeX, Arduino, SolidWorks, Android Studio, Processing, Linux/Shell, Matlab.
 \item \textbf{Skills: } Android Development
 \item \textbf{Operating System: } Windows, Ubuntu  
 \end{itemize}
@@ -127,9 +133,10 @@ Department of Chemical Engineering \hspace{3.25cm} Email: sidgane@iitk.ac.in, si
 
 \section*{\underline{Extra-Curricular Activities}}
 \begin{itemize}
-\item Secured 2\textsuperscript{nd} position in Embedded event in inter-hall technical event,Takneek'16. 
+\item Secured 2\textsuperscript{nd} position in Embedded and 4\textsuperscript{th} position in ElectroWiz inter hall technical event,Takneek'16.
+\item Fabricated block stacking robot and designed its electronic circuit in inter hall technical event,Takneek'15.
 \item Implemented Simon Says Game using basic electronic IC's as a part of Winter Camp by Electronics Club.
-\item Designed Snake Game GUI and its controls using \textbf{Processing} as a part of Winter Camp by Electronics Club  
+\item Designed Snake Game GUI and its controls using processing as a part of Winter Camp by Electronics Club.  
 \item Active member of \textbf{NGO} Umeed working for upliftment of necessitous children .
 \item Regular participant in contests held by various competive coding websites. 
 
