changes on 30/3/2017-II

--- a/Resume_siddharth.tex
+++ b/Resume_siddharth.tex
@@ -9,12 +9,14 @@
 \pagenumbering{gobble}
 \usepackage{enumitem}
 \begin{document}
-
+\begin{flushleft}
 \Huge{\textbf{SIDDHARTH GANERIWALA}}
+\end{flushleft}
 \normalsize
-\newline\newline\newline
 Department of Chemical Engineering \hspace{3.25cm} Email: sidgane@iitk.ac.in, siddharth.ganeriwala1996@gmail.com
 \newline Indian Institute of Technology, Kanpur \hspace{2.75cm} Phone: +91 749 923 3350
+
+\hline
 
 
 \section*{\underline{Educational Qualifications}}
@@ -23,8 +25,8 @@ Department of Chemical Engineering \hspace{3.25cm} Email: sidgane@iitk.ac.in, si
 \begin{tabular}{| >{\centering}m{2cm} | >{\centering}m{4.5cm} | >{\centering}m{5.5cm} | c |}
 \hline
 \textbf{Year} & \textbf{Degree} & \textbf{Institute} & \textbf{CPI / \%} \\ 
-\hline \hline
-2019 (expected)	& Bachelor of Technology, \newline Chemical Engineering & Indian Institute of Technology, Kanpur	& 8 \\
+\hline
+2019 (expected)	& Bachelor of Technology, Chemical Engineering & Indian Institute of Technology, Kanpur	& 8\textsuperscript{$\ast$} \\
 \hline
 2015 & CBSE ( XII Board ) & Sunbeam Lahartara , Varanasi & 95.4 \% \\
 \hline
@@ -32,6 +34,11 @@ Department of Chemical Engineering \hspace{3.25cm} Email: sidgane@iitk.ac.in, si
 \hline
 \end{tabular}
 \end{center}
+\begin{flushright}
+    \small{$\ast$ After 3rd Semester}
+    $\quad$
+\end{flushright}
+
 \section*{\underline{Academic Achievements}}
 \begin{itemize}
 \item Secured an \textbf{All India Rank 5330} in JEE Advanced 2015 conducted by IIT Bombay and about 200,000 students appeared for the exam.
@@ -44,27 +51,34 @@ Department of Chemical Engineering \hspace{3.25cm} Email: sidgane@iitk.ac.in, si
 
 \section*{\underline{Projects}}
 \begin{itemize}
-\item \textbf{Entrance Identification} \hspace{9cm}\textit{January'16 - April'16}
+\item \textbf{Entrance Identification} \hfill\textit{January'16 - April'16}
 \begin{itemize}
 \item Project done under Programming Club as a semester long project. 
 \item Developed a Python program which used an RFID scanned input to check the validity of an ID card
 \item Python code was uploaded on Raspberry PI. 
 
 \end{itemize}
-\item \textbf{Inter IIT Android App} \hspace{9cm}\textit{August'16 - December'16}
+\item \textbf{Inter IIT Android App}\hfill\textit{August'16 - December'16}
 \begin{itemize}
 \item Developed the Front-end for the official Inter IIT Sports meet Android App.
 \item Incorporated features such as Gallery, LiveHelp, Result and Event's Schedule in the app. 
 \end{itemize}
-\item \textbf{Techkriti App} \hspace{10.5cm}\textit{January'17 - Current}
+\item \textbf{Techkriti App} \hfill\textit{January'17 - April'17}
 \begin{itemize}
-\item Presently working on the older version to extemporize the app.
-\item Improvising the GUI of the app and notification system. 
+\item Worked on the previous year's Techkriti App to incorporate new features like LiveHelp, etc.
+\item Improvised the User Interface of the app and notification system. 
 \end{itemize}
-\item \textbf{Stamping Machine} \hspace{9.6cm}\textit{July'16-November'16}
+\item \textbf{Stamping Machine} \hfill\textit{July'16-November'16}
 \begin{itemize}
-\item Course Project for TA201 ( Manufacturing Processes) done under Prof. Niraj Sinha.
+\item Course Project for TA202 ( Manufacturing Processes-II ) done under Prof. Niraj Sinha.
 \item Designed and fabricated a model to stamp on a roll of paper at a fixed interval.
+\item Validated the computer aided design of its prototype with virtual testing in Solidworks.
+\end{itemize}
+\item \textbf{Vertical Lift Bridge} \hfill\textit{January'17-April'17}
+\begin{itemize}
+\item Course Project for TA201 ( Manufacturing Processes) done under Prof. Shashank Shekhar.
+\item Fabricated a model of Vertical Lift Bridge whose height could be varied to give the way to large ships.
+\item Prepared the computer aided design of its prototype on Solidworks.
 \end{itemize}
 \end{itemize}
 
@@ -86,8 +100,7 @@ Department of Chemical Engineering \hspace{3.25cm} Email: sidgane@iitk.ac.in, si
 \end{tabular}
 
 \begin{flushright}
-    \small{$\ast$ - Awarded A grade for performance}
-    $\quad$
+    
     \small{$\dagger$ - Ongoing}
 \end{flushright}
 \end{center}
@@ -103,29 +116,29 @@ Department of Chemical Engineering \hspace{3.25cm} Email: sidgane@iitk.ac.in, si
 
 \section*{\underline{Position of Responsibility}}
 \begin{itemize}
-\item \textbf{Secretary, Electronics Club, IIT Kanpur} \hspace{6.1cm}\textit{May'16 - Current}
+\item \textbf{Secretary, Electronics Club, IIT Kanpur} \hfill\textit{May'16 - April'17}
 \begin{itemize}
-\item Organized events and institute level electronic workshops to introduce the Y16 batch to basic electronics. 
-\item Mentored a short-semester project of the club
+\item Organized events and institute level electronic workshops to introduce the freshmen  to basic electronics. 
+\item Mentored a short-semester long project of the club
 \item Managed budget and the day to day functioning of the club.
 \end{itemize}
-\item \textbf{Company Coordinator, Students' Placement Office, IIT Kanpur}\hspace{2.0cm}\textit{July'16 - Current}
+\item \textbf{Company Coordinator, Students' Placement Office, IIT Kanpur}\hfill\textit{July'16 - April'17}
 \begin{itemize}
 \item Attended HRs and managed their hospitality during PPTs and placement.
 \item Helped with the smooth conduction of the placement interviews during December'16.
 \item Coordinated the students and the Training and Placement Department to avoid misguidance.
-\item Directed the students about the procedures of interviews, group discussions, tests' timings, dress code, etc.
+\item Directed the students about the procedures of interviews, group discussions, dress code, etc.
 \end{itemize}
-\item \textbf{Cordinator, TOSC, Techkriti'17} \hspace{7.5cm}\textit{July'16 - Current}
+\item \textbf{Cordinator, TOSC, Techkriti'17}\hfill\textit{July'16 - April'17}
 \begin{itemize}
 \item Convinced various institues of Varanasi to participate in the school level competition TOSC.
 \item Conducted the first-round in Varanasi which witnessed the participation of 700 students.
 \end{itemize}
-\item \textbf{Volunteer, Hospitality, Antaragni'15} \hspace{6.7cm}\textit{August'15 - October'15}
+\item \textbf{Volunteer, Hospitality, Antaragni'15} \hfill\textit{August'15 - October'15}
 \begin{itemize}
 \item Volunteered and looked into the hospitality of participants.
 \end{itemize}
-\item \textbf{Junior Executive, Marketting, Techkriti'16} \hspace{5.5cm}\textit{January'16 - March'16}
+\item \textbf{Junior Executive, Marketting, Techkriti'16} \hfill\textit{January'16 - March'16}
 \begin{itemize}
 \item Managed the advertising and merchandise for the festival . 
 \end{itemize}
@@ -138,7 +151,7 @@ Department of Chemical Engineering \hspace{3.25cm} Email: sidgane@iitk.ac.in, si
 \item Implemented Simon Says Game using basic electronic IC's as a part of Winter Camp by Electronics Club.
 \item Designed Snake Game GUI and its controls using processing as a part of Winter Camp by Electronics Club.  
 \item Active member of \textbf{NGO} Umeed working for upliftment of necessitous children .
-\item Regular participant in contests held by various competive coding websites. 
+\item Regular participant in contests held by various competive coding websites. Handle-\textbf{Siddharth2610}
 
 
 
