--- a/Resume_siddharth.tex
+++ b/Resume_siddharth.tex
@@ -13,12 +13,9 @@
 \Huge{\textbf{SIDDHARTH GANERIWALA}}
 \end{flushleft}
 \normalsize
-Department of Chemical Engineering \hspace{3.25cm} Email: sidgane@iitk.ac.in, siddharth.ganeriwala1996@gmail.com
-\newline Indian Institute of Technology, Kanpur \hspace{2.75cm} Phone: +91 749 923 3350
-
-\hline
-
-
+Sophomore \hspace{10cm} \hfill{siddharth.ganeriwala1996@gmail.com}
+Department of Chemical Engineering \hfill{sidgane@iitk.ac.in} 
+\newline Indian Institute of Technology, Kanpur \hfill{+91 749 923 3350}
 \section*{\underline{Educational Qualifications}}
 
 \begin{center}
