Fixed Spelling Errors and added Coursework

--- a/Resume_siddharth.tex
+++ b/Resume_siddharth.tex
@@ -86,13 +86,17 @@ Department of Chemical Engineering \hfill{sidgane@iitk.ac.in}
  \begin{itemize}
 \item MTH101 - Calculus and Analytic Geometry
 \item ESC101 - Introduction to C Programming
-\item CHE211 - Fluid Mechanics \textsuperscript{$\dagger$}
+\item ESO207 - Data Structure And Algorithm \textsuperscript{$\dagger$}
+\item CHE211 - Fluid Mechanics
+
 \end{itemize}
 &
 \begin{itemize}
 \item MTH102 - Linear Algebra and ODE
+\item ESC201 - Introduction To Electronics
 \item ESO208 - Numerical Methods
-\item CHE221 - Chemical Thermodynamics\textsuperscript{$\dagger$}
+\item CHE221 - Chemical Thermodynamics
+
 \end{itemize}
 \end{tabular}
 
@@ -126,7 +130,7 @@ Department of Chemical Engineering \hfill{sidgane@iitk.ac.in}
 \item Coordinated the students and the Training and Placement Department to avoid misguidance.
 \item Directed the students about the procedures of interviews, group discussions, dress code, etc.
 \end{itemize}
-\item \textbf{Cordinator, TOSC, Techkriti'17}\hfill\textit{July'16 - April'17}
+\item \textbf{Coordinator, TOSC, Techkriti'17}\hfill\textit{July'16 - April'17}
 \begin{itemize}
 \item Convinced various institues of Varanasi to participate in the school level competition TOSC.
 \item Conducted the first-round in Varanasi which witnessed the participation of 700 students.
@@ -135,7 +139,7 @@ Department of Chemical Engineering \hfill{sidgane@iitk.ac.in}
 \begin{itemize}
 \item Volunteered and looked into the hospitality of participants.
 \end{itemize}
-\item \textbf{Junior Executive, Marketting, Techkriti'16} \hfill\textit{January'16 - March'16}
+\item \textbf{Junior Executive, Marketing, Techkriti'16} \hfill\textit{January'16 - March'16}
 \begin{itemize}
 \item Managed the advertising and merchandise for the festival . 
 \end{itemize}
