Just a minor fix

--- a/Resume_siddharth.tex
+++ b/Resume_siddharth.tex
@@ -38,6 +38,7 @@
 \end{flushleft}
 \normalsize
 Junior Under-Graduate \hspace{7.5cm} \hfill{siddharth.ganeriwala1996@gmail.com}
+\newline
 Department of Chemical Engineering \hfill{sidgane@iitk.ac.in} 
 \newline Indian Institute of Technology, Kanpur \hfill{+91 749 923 3350}
 \section*{Educational Qualifications}
