Added cs425 project

--- a/Resume_siddharth.tex
+++ b/Resume_siddharth.tex
@@ -83,37 +83,49 @@ Department of Chemical Engineering \hfill{sidgane@iitk.ac.in}
 
 \section*{Projects}
 \begin{itemize}
+\item \textbf{HTTP Proxy Server } \hfill\textit{August'17 - November'17}
+\begin{itemize}
+\item Course Project for CS425A ( Computer Networks) done under Prof. Dheeraj Sanghi .
+\item Server handled HTTP GET, HEAD and POST requests and rejected all other types of requests.
+\item Enforced nthentication using username and password and supported User-Based request filtering using domain. 
+\item Implemented caching and load balancing to reduce bandwidth usage and load on web servers %and optimally ditribute load on different proxy servers.
+\end{itemize}
+
 \item \textbf{Entrance Identification} \hfill\textit{January'16 - April'16}
 \begin{itemize}
 \item Project done under Programming Club as a semester long project. 
 \item Developed a Python program which used an RFID scanned input to check the validity of an ID card
 \item Python code was uploaded on Raspberry PI. 
-
 \end{itemize}
+
 \item \textbf{Inter IIT Android App}\hfill\textit{August'16 - December'16}
 \begin{itemize}
 \item Developed the Front-end for the official Inter IIT Sports meet Android App.
 \item Incorporated features such as Gallery, LiveHelp, Result and Event's Schedule in the app. 
 \end{itemize}
+
 \item \textbf{Techkriti App} \hfill\textit{January'17 - April'17}
 \begin{itemize}
 \item Worked on the previous year's Techkriti App to incorporate new features like LiveHelp, etc.
 \item Improvised the User Interface of the app and notification system. 
 \end{itemize}
+
 \item \textbf{Stamping Machine} \hfill\textit{July'16-November'16}
 \begin{itemize}
 \item Course Project for TA202 ( Manufacturing Processes-II ) done under Prof. Niraj Sinha.
 \item Designed and fabricated a model to stamp on a roll of paper at a fixed interval.
 \item Validated the computer aided design of its prototype with virtual testing in Solidworks.
 \end{itemize}
+\newpage 
+
 \item \textbf{Vertical Lift Bridge} \hfill\textit{January'17-April'17}
 \begin{itemize}
 \item Course Project for TA201 ( Manufacturing Processes) done under Prof. Shashank Shekhar.
 \item Fabricated a model of Vertical Lift Bridge whose height could be varied to give the way to large ships.
 \item Prepared the computer aided design of its prototype on Solidworks.
 \item Awarded as \textbf{Best Sectional Project} among many other projects. 
-
 \end{itemize}
+
 \item \textbf{Herbal Soap} \hfill\textit{January'17-April'17}
 \begin{itemize}
 \item Course Project for CHE261 ( Chemical Process Industries) done under Prof. Animangsu Ghatak.
